--- a/etc/auto/config
+++ b/etc/auto/config
@@ -10,6 +10,7 @@ lb config noauto \
     --initramfs none \
     --initsystem systemd \
     --system normal \
+    --bootappend-live "boot=live config hostname=pi username=pi" \
     --distribution "./$BASECODENAME" \
     --parent-distribution "./$BASECODENAME" \
     --archive-areas "main restricted universe multiverse" \
