--- a/etc/auto/config
+++ b/etc/auto/config
@@ -10,12 +10,11 @@ lb config noauto \
     --initramfs none \
     --initsystem systemd \
     --system normal \
-    --bootappend-live "boot=live config hostname=pi username=pi" \
     --distribution "./$BASECODENAME" \
     --parent-distribution "./$BASECODENAME" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
-    --linux-packages "linux-image linux-headers linux-modules linux-modules-extra linux-tools linux-firmware" \
+    --linux-packages "linux linux-modules-extra linux-tools linux-firmware" \
     --linux-flavours "raspi" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
