--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -31,10 +31,10 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi4-${{ github.sha }}
+        key: tarball-rpi-${{ github.sha }}
 
-  deploy_rpi4:
-    needs: build_rpi4
+  deploy_rpi_desktop:
+    needs: build_rpi_desktop
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:     
     - uses: actions/checkout@v3.1.0
@@ -42,18 +42,43 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi4-${{ github.sha }}
+        key: tarball-rpi-${{ github.sha }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G raspberrypi.yaml
+      run: sudo ./debos-docker -m 10G raspberrypi-desktop.yaml
       
     - name: Place output folder
-      run: sudo mkdir -p builds/rpi4
+      run: sudo mkdir -p builds/rpi-desktop
       
     - name: Move to output folder
-      run: sudo mv Rhino*rpi4.img builds/rpi4/
+      run: sudo mv Rhino*rpi-desktop.img builds/rpi-desktop/
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux IMG (RPI4)
-        path: builds/rpi4/
+        name: Rhino Linux Pre-Installed (RPI4)
+        path: builds/rpi-desktop/
+
+  deploy_rpi_server:
+    needs: build_rpi_desktop
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:     
+    - uses: actions/checkout@v3.1.0
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-rpi-${{ github.sha }}
+        
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G raspberrypi-server.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/rpi-server
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*rpi-server.img builds/rpi-server/
+
+    - uses: actions/upload-artifact@v3.1.0
+      with:
+        name: Rhino Linux Pre-Installed (RPI4)
+        path: builds/rpi-server/
