--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -146,4 +146,58 @@ jobs:
         name: Rhino Linux Pre-Built (PinePhone)
         path: builds/pine64/
 
+  build_rpi_tarball:
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    steps:
+    - uses: actions/checkout@v3.1.0
+
+    - name: Install needed packages
+      run: |
+        sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
+        sudo rm -rf /var/lib/apt/lists/*
+        sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
+        sudo apt-get update && sudo apt-get install debootstrap -y
+        sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
+        sudo dpkg -i debs/live-build_*_all.deb
+        sudo mv /usr/share/debootstrap/functions functions
+        sudo patch -i 0002-remove-WRONGSUITE-error.patch
+        sudo mv functions /usr/share/debootstrap/functions
+        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
+        
+    - name: Make scripts executable
+      run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
+
+    - name: Build tarball
+      run: sudo ./build.sh etc/terraform.conf
+      
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-rpi-${{ github.sha }}
+
+  deploy_rpi_desktop:
+    needs: build_rpi_tarball
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:     
+    - uses: actions/checkout@v3.1.0
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-rpi-${{ github.sha }}
+        
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G raspberrypi-desktop.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/rpi-desktop
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*rpi-desktop.img builds/rpi-desktop/
+
+    - uses: actions/upload-artifact@v3.1.0
+      with:
+        name: Rhino Linux Pre-Installed (RPI-Desktop)
+        path: builds/rpi-desktop/
+
 
