--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -150,6 +150,8 @@ jobs:
     runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
     - uses: actions/checkout@v3.1.0
+      with:
+        ref: 'rpi'
 
     - name: Install needed packages
       run: |
@@ -180,6 +182,8 @@ jobs:
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:     
     - uses: actions/checkout@v3.1.0
+      with:
+        ref: 'rpi'
     
     - uses: actions/cache@v3.3.1
       with:
