--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -204,4 +204,37 @@ jobs:
         name: Rhino Linux Pre-Installed (RPI-Desktop)
         path: builds/rpi-desktop/
 
+  deploy_rpi_server:
+    needs: build_rpi_tarball
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:     
+    - uses: actions/checkout@v3.1.0
+      with:
+        ref: 'rpi'
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-rpi-${{ github.sha }}
+        
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G raspberrypi-server.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/rpi-server
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*rpi-server.img builds/rpi-server/
+
+    - uses: actions/upload-artifact@v3.1.0
+      with:
+        name: Rhino Linux Pre-Installed (RPI-Server)
+        path: builds/rpi-server/
+
+
+
+
+
+
+
 
