--- a/raspberrypi-server.yaml
+++ b/raspberrypi-server.yaml
@@ -34,7 +34,7 @@ actions:
   - action: image-partition
     description: Creating image
     imagename: {{ $image }}
-    imagesize: 6GB
+    imagesize: 5500MB
     partitiontype: gpt
     mountpoints:
       - mountpoint: /
@@ -45,12 +45,12 @@ actions:
       - name: boot
         fs: vfat
         start: 1M
-        end: 400MB
+        end: 250MB
         parttype: C12A7328-F81F-11D2-BA4B-00A0C93EC93B
         flags: [ esp,boot ]
       - name: root
         fs: ext4
-        start: 400MB
+        start: 250MB
         end: 100%
         parttype: B921B045-1DF0-41C3-AF44-4C6F280D3FAE
         
