--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -89,12 +89,14 @@ jobs:
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
     - name: Build tarball
-      run: sudo ./build.sh etc/terraform.conf
+      run: |
+        sudo ./build.sh etc/terraform.conf
+        echo "PTAR=$(sha256sum binary/Rhino*.tar)" >> $GITHUB_ENV
       
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-pine-${{ github.sha }}
+        key: tarball-pine-${{ env.PTAR }}
 
   deploy_pinephone_pro:
     needs: build_pine_tarball
@@ -107,7 +109,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-pine-${{ github.sha }}
+        key: tarball-pine-${{ env.PTAR }}
         
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G pinephonepro.yaml
@@ -137,7 +139,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-pine-${{ github.sha }}
+        key: tarball-pine-${{ env.PTAR }}
     
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G pinephone.yaml
@@ -180,12 +182,14 @@ jobs:
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
     - name: Build tarball
-      run: sudo ./build.sh etc/terraform.conf
+      run: |
+        sudo ./build.sh etc/terraform.conf
+        echo "RTAR=$(sha256sum binary/Rhino*.tar)" >> $GITHUB_ENV
       
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi-${{ github.sha }}
+        key: tarball-rpi-${{ env.RTAR }}
 
   deploy_rpi_desktop:
     needs: build_rpi_tarball
@@ -198,7 +202,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi-${{ github.sha }}
+        key: tarball-rpi-${{ env.RTAR }}
         
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G raspberrypi-desktop.yaml
@@ -228,7 +232,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi-${{ github.sha }}
+        key: tarball-rpi-${{ env.RTAR }}
         
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G raspberrypi-server.yaml
