--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -89,14 +89,12 @@ jobs:
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
     - name: Build tarball
-      run: |
-        sudo ./build.sh etc/terraform.conf
-        echo "PTAR=$(sha256sum binary/Rhino*.tar)" >> $GITHUB_ENV
+      run: sudo ./build.sh etc/terraform.conf
       
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-pine-${{ env.PTAR }}
+        key: tar-pine-${{ github.run_id }}-${{ github.run_attempt }}
 
   deploy_pinephone_pro:
     needs: build_pine_tarball
@@ -109,7 +107,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-pine-${{ env.PTAR }}
+        key: tar-pine-${{ github.run_id }}-${{ github.run_attempt }}
         
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G pinephonepro.yaml
@@ -139,7 +137,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-pine-${{ env.PTAR }}
+        key: tar-pine-${{ github.run_id }}-${{ github.run_attempt }}
     
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G pinephone.yaml
@@ -182,14 +180,12 @@ jobs:
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
     - name: Build tarball
-      run: |
-        sudo ./build.sh etc/terraform.conf
-        echo "RTAR=$(sha256sum binary/Rhino*.tar)" >> $GITHUB_ENV
+      run: sudo ./build.sh etc/terraform.conf
       
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi-${{ env.RTAR }}
+        key: tar-rpi-${{ github.run_id }}-${{ github.run_attempt }}
 
   deploy_rpi_desktop:
     needs: build_rpi_tarball
@@ -202,7 +198,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi-${{ env.RTAR }}
+        key: tar-rpi-${{ github.run_id }}-${{ github.run_attempt }}
         
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G raspberrypi-desktop.yaml
@@ -232,7 +228,7 @@ jobs:
     - uses: actions/cache@v3.3.1
       with:
         path: binary/
-        key: tarball-rpi-${{ env.RTAR }}
+        key: tar-rpi-${{ github.run_id }}-${{ github.run_attempt }}
         
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G raspberrypi-server.yaml
