--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -46,7 +46,7 @@ jobs:
         key: tarball-${{ github.sha }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinephonepro.yaml 
+      run: sudo ./debos-docker -m 10G pinephone-unified.yaml 
       
     - name: Place output folder
       run: sudo mkdir -p builds/pinepro
@@ -58,28 +58,3 @@ jobs:
       with:
         name: Rhino Linux OS (PinePhonePro)
         path: builds/pinepro/
-
-  deploy_pinephone:
-    needs: build_tarball
-    runs-on: buildjet-4vcpu-ubuntu-2204
-    steps:     
-    - uses: actions/checkout@v3.1.0
-    
-    - uses: actions/cache@v3.3.1
-      with:
-        path: binary/
-        key: tarball-${{ github.sha }}
-    
-    - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinephone.yaml 
-      
-    - name: Place output folder
-      run: sudo mkdir -p builds/pine64
-      
-    - name: Move to output folder
-      run: sudo mv Rhino*pinephone.img builds/pine64/
-
-    - uses: actions/upload-artifact@v3.1.0
-      with:
-        name: Rhino Linux OS (PinePhone)
-        path: builds/pine64/
