--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -96,7 +96,7 @@ jobs:
         path: binary/
         key: tar-pine-${{ github.run_id }}
 
-  deploy_pinephone_pro:
+  deploy_pine:
     needs: build_pine_tarball
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:
@@ -110,51 +110,21 @@ jobs:
         key: tar-pine-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinephonepro.yaml
+      run: sudo ./debos-docker -m 10G pinephone-unified.yaml
       
     - name: Place output folder
-      run: sudo mkdir -p builds/pinepro
+      run: sudo mkdir -p builds/pine
       
     - name: Move to output folder and compress
       run: |
-        sudo mv Rhino*pro.img builds/pinepro/
-        sudo xz -v builds/pinepro/Rhino*pro.img
-        echo "IMGPPP=$(cd builds/pinepro; ls *.img.xz)" >> $GITHUB_ENV
-
-    - uses: actions/upload-artifact@v3.1.2
-      with:
-        name: ${{ env.IMGPPP }}
-        path: builds/pinepro/${{ env.IMGPPP }}
-
-  deploy_pinephone:
-    needs: build_pine_tarball
-    runs-on: buildjet-4vcpu-ubuntu-2204
-    steps:
-    - uses: actions/checkout@v3.5.0
-      with:
-        ref: 'pinephone'
-    
-    - uses: actions/cache@v3.3.1
-      with:
-        path: binary/
-        key: tar-pine-${{ github.run_id }}
-    
-    - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinephone.yaml
-      
-    - name: Place output folder
-      run: sudo mkdir -p builds/pine64
-      
-    - name: Move to output folder and compress
-      run: |
-        sudo mv Rhino*pinephone.img builds/pine64/
-        sudo xz -v builds/pine64/Rhino*pinephone.img
-        echo "IMGPP=$(cd builds/pine64; ls *.img.xz)" >> $GITHUB_ENV
+        sudo mv Rhino*pro.img builds/pine/
+        sudo xz -v builds/pine/Rhino*unified.img
+        echo "IMGPP=$(cd builds/pine; ls *.img.xz)" >> $GITHUB_ENV
 
     - uses: actions/upload-artifact@v3.1.2
       with:
         name: ${{ env.IMGPP }}
-        path: builds/pine64/${{ env.IMGPP }}
+        path: builds/pine/${{ env.IMGPP }}
 
   build_rpi_tarball:
     runs-on: buildjet-4vcpu-ubuntu-2204-arm
