--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -13,7 +13,9 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-VERSION="$(date -I | sed 's/-/./g')"
+RELEASE="1"
+SUBVER="-beta2"
+VERSION="$(date +%Y).$RELEASE"
 
 # distribution channel
 #CHANNEL="unstable"
