set standard name

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -17,6 +17,9 @@ RELEASE="1"
 SUBVER="-beta2"
 VERSION="$(date +%Y).$RELEASE"
 
+# full image name
+FNAME="Rhino-Linux-$VERSION$SUBVER-pinephone-unified"
+
 # distribution channel
 #CHANNEL="unstable"
 CHANNEL="all"
