--- a/pinephone-unified.yaml
+++ b/pinephone-unified.yaml
@@ -23,11 +23,21 @@ actions:
     description: sudo workaround
     chroot: true
     command: echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+    
+  - action: run
+    description: pacstall workaround
+    chroot: true
+    command:  HOME=/home/rhino runuser -l rhino -c 'pacstall -U pacstall:develop'
 
   - action: run
     description: Install kernel
     chroot: true
     command: HOME=/home/rhino runuser -l rhino -c 'SUDO_USER=rhino pacstall -PI linux-headers-okpine-deb linux-image-okpine-deb linux-libc-dev-okpine-deb'
+    
+  - action: run
+    description: pacstall workaround
+    chroot: true
+    command:  HOME=/home/rhino runuser -l rhino -c 'pacstall -U pacstall:master'
 
   - action: run
     description: sudo workaround
