--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -217,7 +217,67 @@ jobs:
         name: ${{ env.IMGRPS }}
         path: builds/rpi-server/${{ env.IMGRPS }}
 
+  build_tab_tarball:
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    steps:
+    - uses: actions/checkout@v3.5.0
+      with:
+        ref: 'pinetab'
 
+    - name: Install needed packages
+      run: |
+        sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
+        sudo rm -rf /var/lib/apt/lists/*
+        sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
+        sudo apt-get update && sudo apt-get install debootstrap mtools dosfstools qemu-user-static binfmt-support -y
+        sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
+        sudo dpkg -i debs/live-build_*_all.deb
+        sudo mv /usr/share/debootstrap/functions functions
+        sudo patch -i 0002-remove-WRONGSUITE-error.patch
+        sudo mv functions /usr/share/debootstrap/functions
+        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
+        sudo cp binary_rootfs /usr/lib/live/build/binary_rootfs
+        
+    - name: Make scripts executable
+      run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
+
+    - name: Build tarball
+      run: sudo ./build.sh etc/terraform.conf
+      
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tar-tab-${{ github.run_id }}
+
+  deploy_tab:
+    needs: build_tab_tarball
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:
+    - uses: actions/checkout@v3.5.0
+      with:
+        ref: 'pinetab'
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tar-tab-${{ github.run_id }}
+        
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G pinetab2.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/tab
+      
+    - name: Move to output folder and compress
+      run: |
+        sudo mv Rhino*tab2.img builds/tab/
+        sudo xz -v builds/tab/Rhino*tab2.img
+        echo "IMGPT=$(cd builds/tab; ls *.img.xz)" >> $GITHUB_ENV
+
+    - uses: actions/upload-artifact@v3.1.2
+      with:
+        name: ${{ env.IMGPT }}
+        path: builds/tab/${{ env.IMGPT }}
 
 
 
