--- a/.github/workflows/pinetab-image.yml
+++ b/.github/workflows/pinetab-image.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
     - uses: actions/checkout@v3.5.0
+      with:
+        ref: 'pinetab'
 
     - name: Install needed packages
       run: |
@@ -34,11 +36,13 @@ jobs:
         path: binary/
         key: tar-tab-${{ github.run_id }}
 
-  deploy_pine:
-    needs: build_pine_tarball
+  deploy_tab:
+    needs: build_tab_tarball
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:
     - uses: actions/checkout@v3.5.0
+      with:
+        ref: 'pinetab'
     
     - uses: actions/cache@v3.3.1
       with:
@@ -49,20 +53,16 @@ jobs:
       run: sudo ./debos-docker -m 10G pinetab2.yaml
       
     - name: Place output folder
-      run: sudo mkdir -p builds/pine
+      run: sudo mkdir -p builds/tab
       
     - name: Move to output folder and compress
       run: |
-        sudo mv Rhino*unified.img builds/pine/
-        sudo xz -v builds/pine/Rhino*tab2.img
-        echo "IMGPT=$(cd builds/pine; ls *.img.xz)" >> $GITHUB_ENV
+        sudo mv Rhino*tab2.img builds/tab/
+        sudo xz -v builds/tab/Rhino*tab2.img
+        echo "IMGPT=$(cd builds/tab; ls *.img.xz)" >> $GITHUB_ENV
 
     - uses: actions/upload-artifact@v3.1.2
       with:
         name: ${{ env.IMGPT }}
-        path: builds/pine/${{ env.IMGPT }}
-        
-        
-        
-        
+        path: builds/tab/${{ env.IMGPT }}
         
