use proper variables

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -25,7 +25,10 @@ FNAME="Rhino-Linux-$VERSION$SUBVER-$ARCH"
 CHANNEL="all"
 
 # distribution name
-NAME="Rhino Linux"
+DISTRO_NAME="Rhino Linux"
+
+# disk hostname
+NAME="rhino-live"
 
 # mirror to fetch packages from
 if [ $ARCH = arm64 ]; then 
