--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,19 +40,25 @@ jobs:
       #    GH_TOKEN: "${{ github.token }}"
       #    GH_REPO: "${{ github.repository }}"
 
-      - name: Download them ISOs from GitHub releases
+      - name: Download them ISOs from GitHub releases and publish to Wasabi
         run: |
           for num in 1 2 3 4 5; do
             echo "Downloading assets from 'beta${num}'..."
             gh release download "2023.1-beta${num}"
+
+            for iso in *.iso *.img.xz; do
+              rclone copyto --progress "${iso}" "wasabi:dl.rhinolinux.org/releases/2023.1-beta${num}/";
+            done
+
+            rm *.iso *.img.xz
           done
         env:
           GH_TOKEN: "${{ github.token }}"
           GH_REPO: "${{ github.repository }}"
 
-      - name: Upload assets to Wasabi
-        run: |
-          source os/etc/terraform.conf
-          for iso in *.iso *.img.xz; do
-            rclone copyto --progress "${iso}" "wasabi:dl.rhinolinux.org/releases/${VERSION}${SUBVER}/";
-          done
+      #- name: Upload assets to Wasabi
+      #  run: |
+      #    source os/etc/terraform.conf
+      #    for iso in *.iso *.img.xz; do
+      #      rclone copyto --progress "${iso}" "wasabi:dl.rhinolinux.org/releases/${VERSION}${SUBVER}/";
+      #    done
