--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,10 @@ jobs:
         uses: actions/checkout@v3.5.0
         with:
           path: os
-
+      
+      - name: Change APT repository URLs because of the Ubuntu Archive slowdowns
+        run: sudo sed -i 's/azure\.archive\.ubuntu\.com/mirrors.mit.edu/g' /etc/apt/sources.list
+        
       - name: Update APT cache
         run: sudo apt-get update
 
