--- a/etc/config/includes.chroot/lib/systemd/system/modem-start.service
+++ b/etc/config/includes.chroot/lib/systemd/system/modem-start.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=modem power cycle to boot it
-Before=eg25-manager.service
+After=eg25-manager.service
 
 [Service]
 Type=oneshot
