feat: use grub-pc instead of grub-efi

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# target architecture - i386, arm64 or all
+# target architecture - i386, arm64 or amd64
 ARCH="$(dpkg --print-architecture)"
 
 # base codename
@@ -45,7 +45,7 @@ fi
 
 if [ $ARCH = arm64 ]; then 
 BOOTLOADERS="grub-efi"; 
-else BOOTLOADERS="syslinux grub-efi"; 
+else BOOTLOADERS="syslinux grub-pc"; 
 fi
 
 # suffix for generated .iso files
