fix: remove syslinux

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -45,7 +45,7 @@ fi
 
 if [ $ARCH = arm64 ]; then 
 BOOTLOADERS="grub-efi"; 
-else BOOTLOADERS="syslinux grub-pc"; 
+else BOOTLOADERS="grub-pc"; 
 fi
 
 # suffix for generated .iso files
