--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -13,8 +13,8 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-RELEASE="1"
-SUBVER="-beta4"
+RELEASE="2"
+SUBVER=""
 VERSION="$(date +%Y).$RELEASE"
 
 # full image name
