--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,12 +29,14 @@ jobs:
           # as an example.
           mkdir ~/.config/rclone
           echo "
-          [wasabi]
-          type = s3
-          provider = Wasabi
-          access_key_id = ${{ secrets.WASABI_ACCESS_KEY_ID }}
-          secret_access_key = ${{ secrets.WASABI_ACCESS_KEY_SECRET }}
-          endpoint = s3.wasabisys.com
+          [sourceforge]
+          type = sftp
+          host = frs.sourceforge.net
+          pass = ${{ secrets.SOURCEFORGE_PASS }}
+          use_insecure_cipher = true
+          shell_type = unix
+          md5sum_command = none
+          sha1sum_command = none
           " > ~/.config/rclone/rclone.conf
 
       - name: Download release assets from latest CI run
@@ -43,13 +45,33 @@ jobs:
           GH_TOKEN: "${{ github.token }}"
           GH_REPO: "${{ github.repository }}"
 
-      - name: Upload assets to Wasabi
+      - name: Upload assets to SourceForge
         run: |
           source os/etc/terraform.conf
-          mkdir builds/
-          for iso in *.iso *.img.xz; do
-            mv "${iso}"/"${iso}" builds/
-            sha256sum "builds/${iso}" >> "builds/${iso}".sha256
-            rclone copyto --progress --s3-no-check-bucket "builds/${iso}.sha256" "wasabi:dl.rhinolinux.org/releases/${VERSION}${SUBVER}/${iso}.sha256"
-            rclone copyto --progress --s3-no-check-bucket "builds/${iso}" "wasabi:dl.rhinolinux.org/releases/${VERSION}${SUBVER}/${iso}";
+          HEADVER="${VERSION}${SUBVER}"
+          PHONE="${HEADVER}-pinephone"
+          TAB="${HEADVER}-pinetab"
+          RPI="${HEADVER}-rpi"
+          for image in *.iso *.img.xz; do
+            case "${image}" in 
+              *iso)
+                TRUEVER="$HEADVER"
+                ;;
+              *phone*)
+                TRUEVER="$PHONE"
+                ;;
+              *tab*)
+                TRUEVER="$TAB"
+                ;;
+              *rpi*)
+                TRUEVER="$RPI"
+                ;;
+            esac
+            if ! [[ -d "${TRUEVER}/" ]]; then
+              mkdir "${TRUEVER}/"
+            fi
+            mv "${image}"/"${image}" "${TRUEVER}/"
+            sha256sum "${TRUEVER}/${image}" >> "${TRUEVER}/${image}".sha256
+            rclone copyto --progress "${TRUEVER}/${image}.sha256" "sourceforge:/home/frs/project/rhino-linux-builder/${TRUEVER}/${image}.sha256"
+            rclone copyto --progress "${TRUEVER}/${image}" "sourceforge:/home/frs/project/rhino-linux-builder/${TRUEVER}/${image}";
           done
